# LATRACE-AI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  README_zh.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: run-module-checks.sh
.github/workflows/: ci.yml  docker-image.yml
docs/: adk_integration.md  api_reference.md  benchmark_guide.md  tenant_isolation.md
docs/releases/: v0.1.0.md
examples/chat_with_memory/: README.md  chat_with_memory.py
modules/: __init__.py
modules/media_graph_compiler/: __init__.py
modules/media_graph_compiler/adapters/: __init__.py  asset_store.py  audio_from_video.py  audio_operator_adapter.py  default_operator_stages.py  frame_selector.py  local_face_voice_association_stage.py  local_media_pipeline.py  local_semantic_stage.py  local_speaker_stage.py  local_visual_stage.py  media_normalizer.py  media_probe.py  multimodal_input_builder.py  operator_bus.py  semantic_runtime.py  visual_continuity_pipeline.py  visual_track_runtime.py  visual_track_stage.py  visual_tracking_session.py
modules/media_graph_compiler/application/: __init__.py  compile_audio.py  compile_video.py  graph_compiler.py  optimization_plan.py  prompt_loader.py  prompt_packer.py  semantic_provider.py  stage_names.py  window_scheduler.py
modules/memory/: __init__.py  client.py  media_session_write.py  module.manifest.json  retrieval.py  session_write.py
(+449 files in other folders)
